# drip_irrigation_controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  hardware  main.c  timers_default_data.cmake  wlan_setup_data.cmake.template
data/hardware_v2/drip_v2/: drip_v2.kicad_pcb  drip_v2.kicad_prl  drip_v2.kicad_pro  drip_v2.kicad_sch
include/: drip.h  lwipopts.h
src/: drip_conf_enforce_settings.c  drip_conf_load_settings.c  drip_conf_print_settings.c  drip_conf_set_next_timeofday_alarm.c  drip_exe_client_request.c  drip_exe_lights_timed_on.c  drip_exe_water_timed_on.c  drip_load_settings.c  drip_main.c  drip_rtc_compute_rtc-alarms_offset.c  drip_rtc_datetime_print.c  drip_rtc_init.c  drip_rtc_str2datetime.c  drip_time_utils.c  drip_wifi_init.c  drip_wifi_print_pbufchain.c  drip_wifi_recv_callback.c  drip_wifi_set_ip4_addr.c  drip_wifi_udp_server_init.c  main.c
src/conf/: drip_conf_cancel_all_alarms.c  drip_conf_enforce_settings.c  drip_conf_load_settings_default.c  drip_conf_print_settings.c  drip_conf_set_next_timeofday_alarm.c
src/exe/: drip_exe_client_request.c  drip_exe_lights_timed_on.c  drip_exe_water_timed_on.c
src/io/: drip_io_init.c
src/time/: drip_time_compute_rtc_abs_offset.c  drip_time_get_epochus_from_current_rtc_datetime.c  drip_time_get_epochus_from_datetime.c  drip_time_get_next_instant.c  drip_time_print_datetime.c  drip_time_rtc_init.c  drip_time_str2datetime.c
src/wifi/: drip_wifi_init.c  drip_wifi_recv_callback.c  drip_wifi_set_ip4_addr.c  drip_wifi_udp_server_init.c
